--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 
 # various IDEs
 .idea/
-.project
-*.sublime-*
 .vscode/
 
 # logs and cache
@@ -35,10 +33,8 @@ $RECYCLE.BIN/
 *.DS_Store
 .DS_Store?
 
-# node packages
+# 3rd party
 node_modules/
-
-# Composer, exclude on root vendor folder
 /vendor/
 composer.phar
 /composer.lock
