--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,16 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^8.1",
     "ext-openssl": "*",
-    "aws/aws-php-sns-message-validator": "^1.7",
-    "guzzlehttp/guzzle": "^7.3",
-    "illuminate/http": "^8.50 || ^9.3",
-    "illuminate/support": "^8.50 || ^9.3",
+    "aws/aws-php-sns-message-validator": "^1.8",
+    "guzzlehttp/guzzle": "^7.5",
+    "illuminate/http": "^9.34",
+    "illuminate/support": "^9.34",
     "spatie/laravel-webhook-client": "^3.1"
   },
   "require-dev": {
-    "orchestra/testbench": "^6.24 || ^7.1",
+    "orchestra/testbench": "^7.12",
     "phpunit/phpunit": "^9.5"
   },
   "autoload": {
