--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,17 @@
     }
   ],
   "require": {
-    "php": "^8.1",
+    "php": "^8.2",
     "ext-openssl": "*",
     "aws/aws-php-sns-message-validator": "^1.8",
     "guzzlehttp/guzzle": "^7.5",
-    "illuminate/http": "^9.34 || ^10.0",
-    "illuminate/support": "^9.34 || ^10.0",
+    "illuminate/http": "^10.0 || ^11.0",
+    "illuminate/support": "^10.0 || ^11.0",
     "spatie/laravel-webhook-client": "^3.1.7"
   },
   "require-dev": {
-    "orchestra/testbench": "^7.12 || ^8.0",
-    "phpunit/phpunit": "^9.5"
+    "orchestra/testbench": "^8.0 || ^9.0",
+    "phpunit/phpunit": "^9.5 || ^10.0"
   },
   "autoload": {
     "psr-4": {
