test on php 8.4

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ 8.2, 8.3 ]
+        php: [ 8.2, 8.3, 8.4 ]
         laravel: [ 10, 11 ]
+        exclude:
+          - php: 8.4
+            laravel: 10
 
     name: PHP ${{ matrix.php }} - Laravel v${{ matrix.laravel }}
 
@@ -46,6 +49,6 @@ jobs:
         run: composer test:coverage
 
       - name: Upload coverage report
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           fail_ci_if_error: false
